--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="profile-image" src="./Lechico HD.jpg">
+        <img id="profile-image" src="Lechico HDD.jpg">
         <div id="about-me">
             <h2>About Me</h2>
             <p>Hello, my name is Chloyd! I am 20 years old and I am currently a 2nd year college student at APC.</p>
